# auction-service

./: Cargo.toml  README.md  index.html  script.js  styles.css
.cargo/: config.toml
docker/: docker-compose.yaml
src/: handlers.rs  lib.rs  main.rs
src/auction/: events.rs
src/bidding/: commands.rs  model.rs
src/database/: mod.rs
src/event_store/: mod.rs
src/message_broker/: mod.rs
src/query/: handlers.rs  queries.rs
src/scheduler/: mod.rs
src/sql/: 00-recreate-db.sql  01-create-schema.sql
tests/: integration_tests.rs
