[package]
name = "auction-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5" }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
chrono = { version = "0.4.24", features = ["serde"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12.7", features = ["json"] }
